--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,3 +8,13 @@ en:
       previous: "&lt;"
       next: "&gt;"
       truncate: "..."
+
+flash:
+    actions:
+      create:
+        notice: "{resource_name} was successfully created"
+      update:
+        notice: "{resource_name} was successfully updated"
+      destroy:
+        notice: "{resource_name} was successfully destroyed"
+        alert: "{resource_name} could not be destroyed"
