bundle change to pg and updated the README

--- a/README
+++ b/README
@@ -4,11 +4,10 @@ HindSight.Me
 
 
 
-HindSight is a website dedicated to posting peoples life/career/everday lessons that they think should be known onto the world. The sites goal is to help
-people make goals/choices and desicions based on the experience/lessons learned from others. 
+HindSight for experience individuals to post about life, career, and everyday lessons that they believe will help others whom may be following a similar life path. The goal is to help
+people avoid pitfalls and to recognize good opportunities when they are present. With Hindsight, we hope to help share life lessons so that others don't repeat avoidable mistakes with knowledge learned from others. 
 
 
 -----------------------------------
- On the first month after launch I intend to generate as many posts and catch as much feed back as possible about site usability. 
 
 
